tests/noproph/list_std.stderr
error: expected one of `->`, `where`, or `{`, found `#`
   --> ../tests/noproph/list_std.rs:136:1
    |
126 | )
    |  - expected one of `->`, `where`, or `{`
...
136 | #[lemma]
    | ^ unexpected token

error: aborting due to 1 previous error

[TIMESTAMP DEBUG rust_to_gil] Incorrect!
